<resources>
    <string name="app_name">FlashLight</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_battery">Battery Life</string>
    <string name="txt_battery_percentage">37%</string>
    <string name="txt_torch_off">Torch Off</string>
    <string name="txt_torch_on">Torch On</string>
    <string name="txt_compass">Compass</string>
    <string name="sign">o</string>
    <string name="direction_names">NorthEast</string>
    <string name="degree">35</string>
    <string name="txt_question">Do You Like Flashlight App?</string>
    <string name="txt_rate">Rate Your Experience</string>
    <string name="later"><u>Later</u></string>
    <string name="submit">Submit</string>
    <string name="Tap">Tap to Exit</string>
    <string name="seeSoon">see you soon</string>
    <string name="rating">Rating</string>
    <string name="share">Share</string>
</resources>