<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/home_frag_bg"
    tools:context=".BottomSheetRatingFrag" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_dialog_rating"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_question"
        android:layout_marginBottom="11dp"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/txt_rate"
        android:textColor="#FFC107"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/star_3"
        app:layout_constraintEnd_toEndOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/star_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:src="@drawable/ic_nil_star"
        app:layout_constraintBottom_toBottomOf="@+id/star_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/star_2"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/star_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_nil_star"
        app:layout_constraintBottom_toBottomOf="@+id/star_3"
        app:layout_constraintStart_toEndOf="@+id/star_1"
        app:layout_constraintTop_toTopOf="@+id/star_3"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/star_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_nil_star"
        app:layout_constraintBottom_toBottomOf="@+id/star_4"
        app:layout_constraintStart_toEndOf="@+id/star_2"
        app:layout_constraintTop_toTopOf="@+id/star_4"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/star_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_nil_star"
        app:layout_constraintBottom_toBottomOf="@+id/star_5"
        app:layout_constraintStart_toEndOf="@+id/star_3"
        app:layout_constraintTop_toTopOf="@+id/star_5"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/star_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_nil_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/star_4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="302dp" />

    <ImageView
        android:id="@+id/fill_star_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:src="@drawable/ic_full_star"
        app:layout_constraintBottom_toBottomOf="@+id/fill_star_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fill_star_2"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/fill_star_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_full_star"
        app:layout_constraintBottom_toBottomOf="@+id/fill_star_3"
        app:layout_constraintStart_toEndOf="@+id/fill_star_1"
        app:layout_constraintTop_toTopOf="@+id/fill_star_3"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/fill_star_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:src="@drawable/ic_full_star"
        app:layout_constraintBottom_toBottomOf="@+id/fill_star_4"
        app:layout_constraintStart_toEndOf="@+id/fill_star_2"
        app:layout_constraintTop_toTopOf="@+id/fill_star_4"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/fill_star_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:src="@drawable/ic_full_star"
        app:layout_constraintBottom_toBottomOf="@+id/fill_star_5"
        app:layout_constraintStart_toEndOf="@+id/fill_star_3"
        app:layout_constraintTop_toTopOf="@+id/fill_star_5"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/fill_star_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="50dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_full_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/fill_star_4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="302dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:src="@drawable/ic_submit_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.442"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/star_3"
        android:contentDescription="@null" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/later"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.13" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFC107"
        android:text="@string/submit"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4" />

</androidx.constraintlayout.widget.ConstraintLayout>