<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_frag_bg"
    tools:context=".ui.fragments.HomeFrag"
    tools:ignore="MissingClass">

    <ImageView
        android:id="@+id/img_flashlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_bar_flashlight"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/img_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintEnd_toStartOf="@+id/img_rate"
        app:layout_constraintHorizontal_bias="0.853"
        app:layout_constraintStart_toEndOf="@+id/img_flashlight"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_share"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/img_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_rating_thumb"
        android:contentDescription="@null" />

    <ImageView
        android:id="@+id/btn_on"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_torch_button_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/btn_off"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_torch_button_off"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/txt_compass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_compass"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/img_compass"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/img_compass"
        app:layout_constraintTop_toBottomOf="@+id/btn_off" />

    <TextView
        android:id="@+id/txt_battery_life"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_battery"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/img_battery"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/img_battery"
        app:layout_constraintTop_toBottomOf="@+id/btn_off" />

    <ImageView
        android:id="@+id/img_compass"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="11dp"
        android:contentDescription="@null"
        android:layout_marginEnd="30dp"
        android:src="@drawable/ic_compass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/img_battery"
        app:layout_constraintTop_toBottomOf="@+id/txt_compass" />

    <ImageView
        android:id="@+id/img_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:layout_marginStart="30dp"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        android:contentDescription="@null"
        android:src="@drawable/ic_battery"
        app:layout_constraintEnd_toStartOf="@+id/img_compass"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_battery_life" />

    <TextView
        android:id="@+id/txt_battery_percentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_battery_percentage"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/img_battery"
        app:layout_constraintStart_toStartOf="@+id/img_battery"
        app:layout_constraintTop_toBottomOf="@+id/img_battery" />


    <ImageView
        android:id="@+id/img_light_off"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_icon_off"
        app:layout_constraintBottom_toTopOf="@+id/ruler_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_on" />

    <ImageView
        android:id="@+id/img_light_on"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_icon_on"
        app:layout_constraintBottom_toTopOf="@+id/ruler_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_on" />

    <com.kevalpatel2106.rulerpicker.RulerValuePicker
        android:id="@+id/ruler_picker"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/ruler_color"
        app:indicator_color="@android:color/white"
        app:indicator_interval="14dp"
        app:indicator_width="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:max_value="50"
        app:min_value="0"
        app:notch_color="@android:color/white"
        app:ruler_text_size="6sp" />

    <TextView
        android:id="@+id/txt_torch_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/off_color"
        android:text="@string/txt_torch_off"
        app:layout_constraintBottom_toTopOf="@+id/btn_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/line_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:layout_marginStart="19dp"
        android:src="@drawable/ic_battery_line"
        app:layout_constraintBottom_toBottomOf="@+id/img_battery"
        app:layout_constraintStart_toStartOf="@+id/img_battery"
        app:layout_constraintTop_toBottomOf="@+id/txt_battery_life"
        app:layout_constraintVertical_bias="0.612" />

    <ImageView
        android:id="@+id/line_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_battery_line"
        app:layout_constraintBottom_toBottomOf="@+id/img_battery"
        app:layout_constraintStart_toStartOf="@+id/line_1"
        app:layout_constraintTop_toBottomOf="@+id/txt_battery_life"
        app:layout_constraintVertical_bias="0.612" />

    <ImageView
        android:id="@+id/line_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_battery_line"
        app:layout_constraintBottom_toBottomOf="@+id/img_battery"
        app:layout_constraintStart_toStartOf="@+id/line_2"
        app:layout_constraintTop_toBottomOf="@+id/txt_battery_life"
        app:layout_constraintVertical_bias="0.612" />

    <ImageView
        android:id="@+id/line_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_battery_line"
        app:layout_constraintBottom_toBottomOf="@+id/img_battery"
        app:layout_constraintStart_toStartOf="@+id/line_3"
        app:layout_constraintTop_toBottomOf="@+id/txt_battery_life"
        app:layout_constraintVertical_bias="0.612" />

    <ImageView
        android:id="@+id/line_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@null"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_battery_line"
        app:layout_constraintBottom_toBottomOf="@+id/img_battery"
        app:layout_constraintStart_toStartOf="@+id/line_4"
        app:layout_constraintTop_toBottomOf="@+id/txt_battery_life"
        app:layout_constraintVertical_bias="0.612" />








</androidx.constraintlayout.widget.ConstraintLayout>